--- a/src/styles.css
+++ b/src/styles.css
@@ -1,49 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rubik:wght@300;400;700&display=swap');
+
+:root{
+    --font-default: 'Rubik', sans-serif;
+    --font-square: 'Permanent Marker', cursive;
+}
+
 *{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
+html{
+    font-family: var(--font-default);
+    font-size: 18px;
+}
+
 body{
-    font-family: sans-serif;
-    margin: 20px;
-    padding: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
-h1{
-    margin-top: 0;
-    font-size: 22px;
+#root, .game{
+    width: 100%;
+    height: 100%;
 }
 
-h2{
-    margin-top: 0;
-    font-size: 20px;
+.game{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
 }
 
-h3{
-    margin-top: 0;
-    font-size: 18x;
+.game-board, .game-info{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-h4{
-    margin-top: 0;
-    font-size: 16px;
+.status{
+    margin-bottom: 10px;
 }
 
-h5{
-    margin-top: 0;
-    font-size: 14px;
-}
-
-h6{
-    margin-top: 0;
-    font-size: 12px;
-}
-
-code{
-    font-size: 1.2em;
-}
-
-ul{
-    padding-left: 20px;
+li{
+    list-style: none;
 }
 
 .square{
@@ -65,19 +68,6 @@ ul{
     clear: both;
     content: '';
     display: table;
-}
-
-.status{
-    margin-bottom: 10px;
-}
-
-.game{
-    display: flex;
-    flex-direction: row;
-}
-
-.game-info{
-    margin-left: 20px;
 }
 
 .history-item{
