--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-align: center;
 }
 
 html{
     font-family: var(--font-default);
-    font-size: 18px;
+    font-size: 20px;
 }
 
 body{
@@ -29,7 +30,7 @@ body{
 .game{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 30px;
 }
@@ -41,33 +42,62 @@ body{
     align-items: center;
 }
 
-.status{
-    margin-bottom: 10px;
+h1{
+    padding: 20px 0;
 }
 
-li{
-    list-style: none;
+.game-board{
+    min-height: 350px;
+    margin: 20px 0;
+}
+
+.game-info{
+    padding: 20px;
+}
+
+.status{
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 5px;
 }
 
 .square{
     background: #fff;
     border: 1px solid #999;
-    float: left;
+    width: 100px;
+    height: 100px;
+
     font-size: 24px;
     font-weight: bold;
+
+    float: left;
     line-height: 34px;
-    height: 34px;
     margin-right: -1px;
     margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 34px;
 }
 
 .board-row:after{
     clear: both;
     content: '';
     display: table;
+}
+
+.sorting{
+    display: flex;
+    padding: 10px 0;
+    margin-bottom: 20px;
+}
+
+.sorting-option{
+    margin: 0 20px;
+}
+
+input[type="radio"]{
+    margin-right: 5px;
+}
+
+li{
+    list-style: none;
 }
 
 .history-item{
