--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,11 @@
 }
 
 html{
-    font-family: var(--font-default);
     font-size: 20px;
 }
 
 body{
+    font-family: var(--font-default);
     width: 100vw;
     height: 100vh;
 }
@@ -101,5 +101,8 @@ li{
 }
 
 .history-item{
-    min-width: 290px;
+    width: 350px;
+    padding: 10px;
+    margin: 2.5px 0;
+    border-radius: 5px;
 }
