--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ body{
 
 #root, .game{
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 .game{
@@ -98,6 +98,7 @@ input[type="radio"]{
 
 li{
     list-style: none;
+    margin: 0 20px 0 -20px;
 }
 
 .history-item{
