--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rubik:wght@300;400;700&display=swap');
 
 :root{
+    --white: #fff;
+    --gray: #cacaca;
     --font-default: 'Rubik', sans-serif;
     --font-square: 'Permanent Marker', cursive;
 }
@@ -61,25 +63,36 @@ h1{
     padding: 5px;
 }
 
+.board-row{
+    background-color: var(--gray);
+    display: flex;
+}
+
 .square{
-    background: #fff;
-    border: 1px solid #999;
+    background: var(--white);
+    border: 0;
     width: 100px;
     height: 100px;
 
-    font-size: 24px;
+    font-family: var(--font-square);
+    font-size: 36px;
     font-weight: bold;
-
-    float: left;
-    line-height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
 }
 
-.board-row:after{
-    clear: both;
-    content: '';
-    display: table;
+.margin-right{
+    margin-right: 5px;
+}
+
+.margin-left{
+    margin-left: 5px;
+}
+
+.margin-top{
+    margin-top: 5px;
+}
+
+.margin-bottom{
+    margin-bottom: 5px;
 }
 
 .sorting{
