--- a/src/styles.css
+++ b/src/styles.css
@@ -102,16 +102,19 @@ h1{
 }
 
 .sorting-option{
-    margin: 0 20px;
+    margin: 0 15px;
 }
 
 input[type="radio"]{
     margin-right: 5px;
 }
 
+ol{
+    padding: 0;
+}
+
 li{
     list-style: none;
-    margin: 0 20px 0 -20px;
 }
 
 .history-item{
